...
                    android:src="@drawable/ic_baseline_person_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/firstNameEditText"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:autofillHints="name"
                    android:hint="@string/enter_your_first_name_here"
...
                    android:src="@drawable/ic_baseline_person_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/lastNameEditText"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:autofillHints="name"
                    android:hint="@string/enter_your_last_name_here"
...
                    android:src="@drawable/ic_baseline_local_phone_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/phoneNoEditText"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:autofillHints="phone"
                    android:hint="@string/enter_your_phone_no_here"
...
                    android:src="@drawable/ic_baseline_email_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:autofillHints="emailAddress"
                    android:hint="@string/enter_your_email_here"
...
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/genderRadioGroup">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/maleRadioButton"
                    android:text="@string/male"
                    android:checked="@={viewModel.isMale}"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/femaleRadioButton"
...
                    android:src="@drawable/ic_baseline_lock_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:autofillHints="password"
                    android:hint="@string/password_hint"
...
                    android:src="@drawable/ic_baseline_lock_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/confirmPasswordEditText"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:autofillHints="password"
                    android:hint="@string/password_hint"
...
                    android:layout_weight="1"
                    android:text="@string/previous"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/nextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/next" />
            </LinearLayout>

...
